--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+## Rails
 # Ignore all logfiles and tempfiles.
 */log/*
 */tmp/*
@@ -7,3 +8,13 @@
 # Ignore master key for decrypting credentials and more.
 config/master.key
 database.yml
+
+## Symfony
+*/.idea/*
+.env.local
+.env.local.php
+.env.*.local
+*/config/secrets/prod/prod.decrypt.private.php
+*/public/bundles/
+*/var/
+*/vendor/
