--- a/dotnet-weblog/docker-compose.yml
+++ b/dotnet-weblog/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3"
 services:
   web:
-    image: mcr.microsoft.com/dotnet/core/sdk:3.1-buster
+    build: .
     container_name: dotnet_weblog
     volumes:
       - .:/myapp
