--- a/sinatra-weblog/Gemfile
+++ b/sinatra-weblog/Gemfile
@@ -4,6 +4,7 @@ git_source(:github) { |repo| "https://github.com/#{repo}.git" }
 ruby '2.6.5'
 
 gem "sinatra"
+gem "sinatra-contrib"
 gem "sequel"
 gem "mysql2"
 gem "thin"
